# iamwhistlebaby

./: Base32.cpp  Base32.h  CMakeLists.txt  CRC.h  CRC32.h  Coder.cpp  Coder.h  Decoder.cpp  Decoder.h  Decoder2.cpp  Decoder2.h  MessageDecoder.cpp  MessageDecoder.h  MessageDecoder2.cpp  MessageDecoder2.h  PitchDetector.cpp  PitchDetector.h  README.md  Segment.cpp  Segment.h  SimpleMessageDecoder.cpp  SimpleMessageDecoder.h  Synthesizer.cpp  Synthesizer.h  VarianceTree.cpp  VarianceTree.h  VarienceMessageDecoder.cpp  VarienceMessageDecoder.h  Veslo.cpp  Veslo.h  WhistleConfig.h.in  WhistleProtocol.cpp  WhistleProtocol.h  YinDecoder.cpp  YinDecoder.h  audioData.h  main.cpp  pitches.gnu  readme.txt  synthesizer.cpp  (+4 more)
linux/: CMakeLists.txt  PAWhistleProtocol.cpp  PAWhistleProtocol.h  command.h  linux_listen.cpp  linux_synth.cpp  plot-pitches.sh  plot-samples.sh  protocol.cpp  record.cpp
macos/: CMakeLists.txt  audiotest.cpp  macaudio_listen.cpp  macaudio_synth.cpp
media_tests/: CMakeLists.txt  decode_file.cpp  decode_test.cpp  encode_test.cpp  play.cpp  plot-pitches.sh  record.cpp
whistle_tests/: CMakeLists.txt  LoopbackWhistleProtocol.cpp  LoopbackWhistleProtocol.h  TreeTest.cc  WhistleTest.cc  decode_file.cpp  decode_file2.cpp  main.cpp  stringutil.h
whistle_tests/lib/gtest-1.7.0/: configure
